--- a/project/index.html
+++ b/project/index.html
@@ -6,10 +6,16 @@
   <body>
       <div class="wrapper">
          <div class="wrapper__content">
+             <div class="cup-body"></div>
+             <div class="cup-label"></div>
+             <div class="cup-label-red"></div>
              <div class="cup-upper">
                  <div class="cup-upper-shadow"></div>
              </div>
              <div class="cup-middle"></div>
+             <div class="cup-bottom">
+                <div class="cup-bottom-shadow"></div>
+             </div>
          </div>
       </div>
   </body>
