--- a/project/index.html
+++ b/project/index.html
@@ -7,8 +7,16 @@
       <div class="wrapper">
          <div class="wrapper__content">
              <div class="cup-body"></div>
+             <div class="cup-body-shadow"></div>
              <div class="cup-label"></div>
-             <div class="cup-label-red"></div>
+             <div class="cup-label-red">
+                <div class="cup-label-red-shadow"></div>
+             </div>
+             <div class="face">
+                 <div class="face-eyes"></div>
+                 <div class="face-mouth"></div>
+             </div>
+             <div class="cup-body-shadow-bottom"></div>
              <div class="cup-upper">
                  <div class="cup-upper-shadow"></div>
              </div>
@@ -16,6 +24,7 @@
              <div class="cup-bottom">
                 <div class="cup-bottom-shadow"></div>
              </div>
+             <div class="floor"></div>
          </div>
       </div>
   </body>
