--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,8 @@
   <body>
       <div class="wrapper">
          <div class="wrapper__content">
+             <div class="spots"></div>
+             <div class="spots-2"></div>
              <div class="cup-body"></div>
              <div class="cup-body-shadow"></div>
              <div class="cup-label"></div>
