--- a/project/index.html
+++ b/project/index.html
@@ -6,24 +6,24 @@
   <body>
       <div class="wrapper">
          <div class="wrapper__content">
-             <div class="spots"></div>
-             <div class="spots-2"></div>
+             <!-- <div class="spots"></div>
+             <div class="spots-2"></div> -->
              <div class="cup-body"></div>
              <div class="cup-body-shadow"></div>
-             <div class="cup-label"></div>
-             <div class="cup-label-red">
+             <div class="cup-label is-hidden"></div>
+             <div class="cup-label-red is-hidden">
                 <div class="cup-label-red-shadow"></div>
              </div>
-             <div class="face">
+             <div class="face is-hidden ">
                  <div class="face-eyes"></div>
                  <div class="face-mouth"></div>
              </div>
              <div class="cup-body-shadow-bottom"></div>
-             <div class="cup-upper">
+             <div class="cup-upper is-hidden">
                  <div class="cup-upper-shadow"></div>
              </div>
-             <div class="cup-middle"></div>
-             <div class="cup-bottom">
+             <div class="cup-middle is-hidden"></div>
+             <div class="cup-bottom is-hidden">
                 <div class="cup-bottom-shadow"></div>
              </div>
              <div class="floor"></div>
