--- a/project/index.html
+++ b/project/index.html
@@ -6,20 +6,19 @@
   <body>
       <div class="wrapper">
          <div class="wrapper__content">
-             <!-- <div class="spots"></div>
-             <div class="spots-2"></div> -->
-             <div class="cup-body"></div>
-             <div class="cup-body-shadow"></div>
-             <div class="cup-label is-hidden"></div>
+             <div class="like">❤</div>
+            <div class="cup-body"></div>
+            <div class="cup-body-shadow"></div>
+            <div class="cup-body-shadow-bottom"></div>
+              <div class="cup-label is-hidden"></div>
              <div class="cup-label-red is-hidden">
                 <div class="cup-label-red-shadow"></div>
-             </div>
+             </div> 
              <div class="face is-hidden ">
                  <div class="face-eyes"></div>
                  <div class="face-mouth"></div>
-             </div>
-             <div class="cup-body-shadow-bottom"></div>
-             <div class="cup-upper is-hidden">
+             </div> 
+              <div class="cup-upper is-hidden">
                  <div class="cup-upper-shadow"></div>
              </div>
              <div class="cup-middle is-hidden"></div>
